# thesis-bikeshare-synthesis

./: .gitignore  pyproject.toml  requirements.txt
Notebooks/: 01_london_raw_parquet_eda.ipynb  02_eda_featured_data.ipynb  check.ipynb  final_training_dataset_complete_eda.ipynb  final_training_dataset_eda.ipynb  final_training_dataset_with_weather_eda.ipynb
artifacts/data_quality/: data_quality_report.csv  data_quality_report.xlsx
artifacts/model_input/: continuous_scaler_chicago_nyc_sampled.joblib  continuous_scaler_chicago_sampled.joblib  continuous_scaler_london_train.joblib  continuous_scaler_nyc_sampled.joblib  final_feature_columns_london_train.json
src/: 01_build_featured_data.py  02_eda_featured_data.py  03_filtering.py  04_stratified_sampling.py  05_add_weather_to_final_dataset.py  06_prepare_model_input.py  07_data_quality_report.py  08_london_split_model_input.py  09_train_tabddpm_oracle.py  10_train_tabddpm_crosscity.py  96_build_weather_context.py  feature_engineering_utils.py  gen_model_schema.py  l1_lnd_dataset_build.py
src/Non_Used_Code/: 90_convert_raw_csvs_to_parquet.py  91_verify_raw_csv_parquet_conversion.py  92_standalone_clean_parquet.py  93_standalone_feature_engineering.py  94_build_urban_grid_metrics.py  95_build_topography_grid_metrics.py  96_convert_london_csvs_to_parquet.py  97_merge_nyc_monthly_parquet.py  data_cleaning.py
