[project]
name = "thesis-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "meteostat>=1.6.0",
    "synthcity>=0.2.12",
    "scipy>=1.2.0",
    "openpyxl>=3.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "lxml>=6.1.0",
]

